--- a/Sicsoft.Checkin.Web/Pages/Movimientos/Observar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Movimientos/Observar.cshtml
@@ -84,6 +84,11 @@
             html = html.replace("Fecha", '@Model.Input.Fecha.ToString("dd/MMMM/yyyy")');
             html = html.replace("NombreClienteR", "@Model.Input.CardName");
             html = html.replace("TelefonoCliente", "@Model.Llamada.NumeroPersonaContacto");
+            html = html.replace("ItemCodeProd", "@Model.Llamada.ItemCode");
+            html = html.replace("NumBoleta", "@Model.Llamada.DocEntry");
+            html = html.replace("SerieProd", "@Model.Llamada.SerieFabricante");
+
+
 
 
             Diagnostico += "@Model.Llamada.Comentarios \n";
