--- a/Sicsoft.Checkin.Web/Pages/Reparacion/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Reparacion/Editar.cshtml
@@ -435,6 +435,10 @@
                 if(valorTP == "2" || valorTP == "9" ) //Presupuesto o reparado en garantia
                 {
                     $("#tipoGarantia").removeAttr("hidden");
+                    if(valorTP == "2")
+                    {
+                        $("#TipoGarantia").val(3);
+                    }
                 }else{
                     $("#tipoGarantia").attr("hidden", true);
                 }
@@ -912,6 +916,13 @@
                 if (recibido.StatusLlamada == "48" && documentosbase64.length == 0)
                 {
                     throw new Error("Llamada en status POR PROCESAR, debe llevar adjuntos");
+                }
+
+                var valorTP = $("#TPLlamada").val();
+                var vGarantia = parseInt($("#TipoGarantia").val());
+                if (valorTP == "9" && vGarantia == 3)
+                {
+                    throw new Error("Debe seleccionar otro tipo de Garantia");
                 }
                 console.log(JSON.stringify(recibido));
 
@@ -2302,7 +2313,7 @@
                             <div class="form-group">
                                 <label>Tipo de Garantia:</label>
                                 <select id="TipoGarantia" class="form-control" asp-for="InputLlamada.Garantia" required>
-                                    @foreach (var item in Model.Garantias) //.Where(a => a.idSAP == "1" || a.idSAP == "2" || a.idSAP == "9"))
+                                    @foreach (var item in Model.Garantias.Where(a => a.taller)) //.Where(a => a.idSAP == "1" || a.idSAP == "2" || a.idSAP == "9"))
                                     {
                                         <option value="@item.id">@item.Nombre</option>
                                     }
